--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=4000
-DATABASE_URL= mongodb+srv://sachinbarvekar2003:D3S5TxeEKU4nyXre@cluster0.yzhu0bf.mongodb.net/MealMinds
+DATABASE_URL= mongodb+srv://sachinbarvekar2003:lLR4hVFUnPfyOVt6@mealminds.t15oc.mongodb.net/MealMindsDB
 CLOUD_NAME = dxryoorre
 API_KEY=764598436753297
 API_SECRET=IpJXcVus3OCjvkelzgvnJdnGtu4
