--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.3",
+    "dotenv": "^16.4.5",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.0"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
